<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>jar</packaging>
	<groupId>com.group_8</groupId>
	<artifactId>universal_gift_registry</artifactId>
	<version>1.0</version>
	<name>universal_gift_registry</name>
	<description>Universal Gift Registry project for SWE.</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>21</maven.compiler.source>
    	<maven.compiler.target>21</maven.compiler.target>
		<java.version>21</java.version>
		<start-class>com.group_8.universal_gift_registry.UniversalGiftRegistryApplication</start-class>
	</properties>
	<dependencies>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.30</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-base</artifactId>
        	<version>21.0.2</version>
        	<scope>compile</scope>
    	</dependency>
		<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-controls</artifactId>
        	<version>21.0.2</version>
        	<scope>compile</scope>
    	</dependency>
    	<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-fxml</artifactId>
        	<version>21.0.2</version>
        	<scope>compile</scope>
    	</dependency>
    	<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-media</artifactId>
        	<version>21.0.2</version>
    	</dependency>
    	<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-graphics</artifactId>
        	<version>21.0.2</version>
        	<scope>compile</scope>
    	</dependency>
    	<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-swing</artifactId>
        	<version>21.0.2</version>
        	<scope>compile</scope>
    	</dependency>
    	<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-web</artifactId>
        	<version>21.0.2</version>
        	<scope>compile</scope>
    	</dependency>
    	<dependency>
		    <groupId>jakarta.persistence</groupId>
		    <artifactId>jakarta.persistence-api</artifactId>
		    <version>3.2.0-M2</version>
		</dependency>
		<dependency>
		    <groupId>javax.xml.bind</groupId>
		    <artifactId>jaxb-api</artifactId>
		    <version>2.3.1</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
			    <artifactId>maven-compiler-plugin</artifactId>
			    <version>3.9.0</version>
			    <configuration>
			        <release>21</release>
			    </configuration>
			</plugin>
	        <plugin>
	            <groupId>org.codehaus.mojo</groupId>
	            <artifactId>exec-maven-plugin</artifactId>
	            <version>3.0.0</version>
	            <configuration>
	                <mainClass>com.group_8.universal_gift_registry.UniversalGiftRegistryApplication</mainClass>
	                <arguments>
	                    <argument>--illegal-access=permit</argument>
	                </arguments>
	            </configuration>
	            <executions>
	                <execution>
	                    <goals>
	                        <goal>java</goal>
	                    </goals>
	                </execution>
	            </executions>
	        </plugin>
	        <plugin>
			    <groupId>org.openjfx</groupId>
			    <artifactId>javafx-maven-plugin</artifactId>
			    <version>0.0.8</version>
			    <configuration>
			        <mainClass>com.group_8.universal_gift_registry.UniversalGiftRegistryApplication</mainClass>
			    </configuration>
			</plugin>
			<plugin>
	            <artifactId>maven-jar-plugin</artifactId>
	            <version>3.2.0</version>
	            <configuration>
	                <archive>
	                    <manifest>
	                        <addClasspath>true</addClasspath>
	                        <mainClass>com.group_8.universal_gift_registry.UniversalGiftRegistryApplication</mainClass>
	                    </manifest>
	                </archive>
	            </configuration>
	        </plugin>
			<plugin>
			    <groupId>com.akathist.maven.plugins.launch4j</groupId>
			    <artifactId>launch4j-maven-plugin</artifactId>
			    <version>2.5.0</version>
			    <executions>
			        <execution>
			            <id>l4j-clui</id>
			            <phase>package</phase>
			            <goals>
			                <goal>launch4j</goal>
			            </goals>
			            <configuration>
			                <headerType>gui</headerType>
			                <outfile>${project.basedir}/${project.artifactId}.exe</outfile>
			                <jar>${project.build.directory}/${project.artifactId}-${project.version}.jar</jar>
			                <icon>${project.basedir}/src/main/resources/pages/UGR_Logo.ico</icon>
			                <jre>
			                    <path>${project.basedir}/jre-1.8</path>
			                    <minVersion>1.8.0</minVersion>
			                </jre>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
		</plugins>
	</build>
</project>
